@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US003

class Organization {
}

class Collaborator {
    name
    birthday
    admissionDate
    address
    phoneNumber
    email
    IDDocType
    IDNumber
}

class HumanResourcesManager {
    name
}

class Job {
    name
}

enum IdDocType {
    type
}

Organization "1" -- "1..*" HumanResourcesManager : has >
Organization "1" -- "1..*" Collaborator : has >
Organization "1" -- "1..*" Job : has >
HumanResourcesManager "1" -- "1" Job : selects  >
Job "1" -- "0..*" Collaborator : assigned to >
HumanResourcesManager "1" -- "1..*" Collaborator : register >
Collaborator "0..*" -- "1" Job : has >
Collaborator "0..*" -- "1" IdDocType : has >

@enduml
